--- a/styles/stile.css
+++ b/styles/stile.css
@@ -144,8 +144,6 @@ i{
     overflow: hidden;
     background-color: #333;
     border: 0px solid #333;
-
-
     box-shadow: 0px 1px 6px 0px rgba(32,33,36,0.28);
   }
 
@@ -227,6 +225,7 @@ i{
     .sidenav a {font-size: 18px;}
   }
 
+  /* Sidenav Button */
   .container {
     margin: 8px;
     margin-left: 18px;
@@ -251,4 +250,68 @@ i{
 
   .change .bar3 {
     transform: rotate(45deg) translate(-7px, -7px);
+  }
+
+  /* Sidenav not laoding */
+
+  .loading-container{
+    width: 100%;
+    margin: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .load1{
+    border: 6px solid rgb(38, 168, 11);
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-radius: 100px;
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    position: absolute;
+    margin: 50%;
+    transform: translate(-50%, -50%);
+    animation: 3s loading infinite;
+  }
+
+  .load2{
+    border: 6px solid rgb(38, 168, 11);
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-radius: 100px;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    position: absolute;
+    margin: 50%;
+    transform: translate(-50%, -50%);
+    animation: 2s loading infinite;
+    animation-delay: 0.5s;
+  }
+
+  .load3{
+    border: 6px solid rgb(38, 168, 11);
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-radius: 100px;
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    position: absolute;
+    margin: 50%;
+    transform: translate(-50%, -50%);
+    animation: 1.5s loading infinite;
+    animation-delay: 0.5s;
+  }
+
+  @keyframes loading{
+    0%{
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+    50%{
+      transform: translate(-50%, -50%) rotate(-360deg);
+    }
+    100%{
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
   }
