--- a/styles/stile.css
+++ b/styles/stile.css
@@ -17,7 +17,7 @@ font-family: segoe UI;
     padding-left: 6px;
   }
   h4 {
-    color: blue;
+    color: rgb(58, 51, 171);
     text-align: left;
     font-family: segoe UI Light;
     padding-left: 6px;
@@ -72,6 +72,9 @@ font-family: segoe UI;
     
     .button:hover {opacity: 1}
 
+    input{
+      outline: none;
+    }
     input[type=text], input[type=password], select {
       width: 100%;
       padding: 12px 20px;
@@ -110,13 +113,13 @@ font-family: segoe UI;
   height: 10px;
 }
 .accessoIcona{
-  width: 10px;
+  width: 30px;
   text-align: center;
 }
 
 i{
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
   font-size: 30px;
   background-color: rgb(38, 168, 11);
   color: white;
@@ -125,9 +128,11 @@ i{
 }
 .commandLinkTitle
 {
-   color: black;
+  margin: 3px;
+  color: rgb(58, 51, 171);
   text-align: left;
   padding: 1px;
+  font-weight: bold;
 }
 .titoloAccesso{
   margin: 3px;
@@ -200,7 +205,7 @@ i{
     font-size: 25px;
     color: black;
     display: block;
-    transition: 0.3s;
+    transition: 0.2s;
   }
   
   .sidenav a:hover {
@@ -217,7 +222,7 @@ i{
   }
   
   #main {
-    transition: margin-left .5s;
+    transition: margin-left .2s;
     padding: 16px;
     margin-left: 225px;
   }
@@ -227,27 +232,94 @@ i{
     .sidenav a {font-size: 18px;}
   }
 
+  /* Sidenav Button */
   .container {
+    margin: 8px;
+    margin-left: 18px;
     display: inline-block;
     cursor: pointer;
   }
   
   .bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
+    width: 24px;
+    height: 4px;
     background-color: #fff;
     margin: 6px 0;
-    transition: 0.4s;
+    border-radius: 100px;
+    transition: 0.2s;
   }
   
   .change .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-    transform: rotate(-45deg) translate(-9px, 6px);
+transform: rotate(-45deg) translate(-7px, 7px);
   }
   
   .change .bar2 {opacity: 0;}
   
   .change .bar3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px);
-    transform: rotate(45deg) translate(-8px, -8px);
+	transform: rotate(45deg) translate(-7px, -7px);
+  }
+  
+  
+ /* Sidenav not laoding */
+
+  .loading-container{
+    width: 100%;
+    margin: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .load1{
+    border: 6px solid rgb(38, 168, 11);
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-radius: 100px;
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    position: absolute;
+    margin: 50%;
+    transform: translate(-50%, -50%);
+    animation: 3s loading infinite;
+  }
+
+  .load2{
+    border: 6px solid rgb(38, 168, 11);
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-radius: 100px;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    position: absolute;
+    margin: 50%;
+    transform: translate(-50%, -50%);
+    animation: 2s loading infinite;
+    animation-delay: 0.5s;
+  }
+
+  .load3{
+    border: 6px solid rgb(38, 168, 11);
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-radius: 100px;
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    position: absolute;
+    margin: 50%;
+    transform: translate(-50%, -50%);
+    animation: 1.5s loading infinite;
+    animation-delay: 0.5s;
+  }
+
+  @keyframes loading{
+    0%{
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+    50%{
+      transform: translate(-50%, -50%) rotate(-360deg);
+    }
+    100%{
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
   }
