--- a/styles/stile.css
+++ b/styles/stile.css
@@ -1,33 +1,66 @@
 body {
-background-color: white;
-background-attachment: fixed;
-font-family: segoe UI;
-  }
+  background-color: white;
+  background-attachment: fixed;
+  font-family: segoe UI;
+}
+
+/*#logStudente, #home, #logProf, #chiSei{
+  background-color: #4a4a4a;
+  color: white;
+}*/
 
   h1 {
-    color: black;
+    color: rgb(123, 209, 47);
     text-align: center;
     text-shadow: 0 0 0px #000000;
     font-family: segoe UI;
   }
+
   .pCaption {
     color: rgb(0, 32, 211);
     text-align: left;
     font-family: segoe UI;
     padding-left: 6px;
   }
+
   h4 {
-    color: blue;
+    width: 635px;
+    padding: 6px;
+    border-radius: 6px;
+    color: rgb(123, 209, 47);
     text-align: left;
     font-family: segoe UI Light;
+    font-size: 28;
     padding-left: 6px;
+    margin-left: 50%;
+    transform: translateX(-50%);
   }
+.infoLogin{
+  /*font-weight: bold;*/
+  font-family: Verdana;
+  margin-bottom: 40px;
+  color: black;
+}
+
+
+.infoBoxLogin{
+  text-align: center;
+  border-bottom: 2px solid rgb(222, 222, 222);
+  text-align:center;
+}
+
+.selectLogin{
+  margin: 8px;
+  padding: 18px;
+  border-radius: 16px;
+}
+
+.selectLogin:hover{
+  background-color: rgb(222, 222, 222);
+}
+
   p {
     font-family: segoe UI;
-  }
-  .red
-  {
-    color:red;
   }
 
   td
@@ -43,17 +76,19 @@ font-family: segoe UI;
 
   .bg
   {
-    background-color: rgb(250, 250, 250);
     float: center;
-    margin-left:auto;
-    margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;
     box-shadow: 0px 1px 6px 0px rgba(32,33,36,0.28);
     border-radius: 20px;
     padding: 20px;
+    background-color: rgb(250, 250, 250);
+    color: black;
     /*border: 1px solid cornflowerblue;*/
   }
 
-  .button {
+
+/*  .button {
     border-radius: 10px;
       background-color: #eee;
       border: 1px;
@@ -70,75 +105,116 @@ font-family: segoe UI;
       cursor: pointer;
     }
 
-    .button:hover {opacity: 1}
+    .button:hover {opacity: 1}*/
+
+    form{
+      align-items: center;
+    }
 
     input{
       outline: none;
+      font-size: 18px;
     }
 
     input[type=text], input[type=password], select {
-      width: 100%;
+      color: black;
+      width: 600px;
       padding: 12px 20px;
       margin: 8px 0;
       display: inline-block;
-      border: 1px solid #ccc;
-      border-radius: 4px;
+      border: none;
+      background-color: transparent;
       box-sizing: border-box;
+      border-bottom: 3px rgb(222, 222, 222) solid;
+      transition: 0.25s;
+    }
+
+    input[type=text]:focus, input[type=password]:focus{
+      padding: 12px 35px;
+      border-bottom: 3px rgb(123, 209, 47) solid;
     }
 
     input[type=submit], input[type=button]  {
-      border-radius: 10px;
-      background-color: #eee;
-      border: 1px;
-      border-color: black;
-      color: black;
-      padding: 16px 32px;
+      border: transparent;
+      border-radius: 100px;
+      color: white;
+      padding: 12px 22px;
       text-align: center;
       font-size: 16px;
-      margin: 4px 2px;
-      opacity: 0.6;
+      margin: 4px;
+      margin-top: 40px;
       transition: 0.3s;
       display: inline-block;
       text-decoration: none;
       cursor: pointer;
-
     }
 
-    input[type=submit]:hover, input[type=button]:hover {
-      background-color: #45a049;
-      opacity: 1;
+    form input[type=button]{
+      background-color: rgb(247, 159, 31);
     }
+    form input[type=button]:hover {
+      background-color: rgb(252, 207, 139);
+      color: black;
+    }
+
+    form input[type=submit]{
+      background-color: #rgb(123, 209, 47);
+    }
+
+    form input[type=submit]:hover{
+      background-color: #rgb(184, 235, 140);
+      color: black;
+    }
+
 /*login*/
 .commandLinkTD
 {
   padding: 3px;
   height: 10px;
+  color: black;
 }
+
+.commandLinkTitle
+{
+  margin: 3px;
+  color: rgb(247, 159, 31);
+  font-family: sans-serif;
+  font-weight: bold;
+  text-align: left;
+  padding: 1px;
+}
+
 .accessoIcona{
   width: 30px;
   text-align: center;
 }
 
-i{
+table i{
   width: 30px;
   height: 30px;
-  font-size: 30px;
-  background-color: rgb(38, 168, 11);
-  color: white;
-  padding: 20px;
+  font-size: 24px;
+  background-color: rgb(123, 209, 47);
+  color: /*#4a4a4a*/ white;
+  padding: 14px;
   border-radius: 100px;
 }
-.commandLinkTitle
-{
-  margin: 3px;
-  color: black;
-  text-align: left;
-  padding: 1px;
+
+.divider{
+  width: 0px;
+  height: 300px;
+  margin: 20px;
+  border: rgb(222, 222, 222) solid 2px;
 }
+
 .titoloAccesso{
   margin: 3px;
   font-size: 20px;
   text-align: left;
+}
+
+form b{
+  color:  rgb(123, 209, 47);
+  font-size: 24px;
 }
   /*navbar*/
 
@@ -148,8 +224,8 @@ i{
     margin: 0px, 0px, 0px, 5px;
     padding: 5px;
     overflow: hidden;
-    background-color: #333;
-    border: 0px solid #333;
+    background-color: #4a4a4a;
+    border: 0px solid #4a4a4a;
     box-shadow: 0px 1px 6px 0px rgba(32,33,36,0.28);
   }
 
@@ -187,7 +263,7 @@ i{
     top: 0;
     left: 0;
     overflow-x: hidden;
-    transition: 0.2s;
+    transition: 0.1s;
     padding-top: 60px;
     border-top-right-radius: 20px;
     margin-left: 5px;
@@ -197,19 +273,23 @@ i{
   }
 
   .sidenav a {
+    margin-left: 16px;
+    margin-right: 16px;
     padding: 8px;
-    padding-left: 32px;
-    padding-right: 12px;
     text-decoration: none;
+    text-align:center;
     font-size: 25px;
     color: black;
     display: block;
     transition: 0.3s;
+    border-bottom: 2px rgb(222, 222, 222) solid;
   }
 
   .sidenav a:hover {
-    background-color: darkgray;
-    color:white;
+    margin-left: 0;
+    margin-right: 0;
+    background-color: rgb(123, 209, 47);
+    color: white;
   }
 
   .sidenav .closebtn {
@@ -233,10 +313,18 @@ i{
 
   /* Sidenav Button */
   .container {
-    margin: 8px;
-    margin-left: 18px;
     display: inline-block;
     cursor: pointer;
+    padding: 8px;
+    padding-left: 14px;
+    padding-right: 14px;
+    border-radius: 6px;
+    margin: 0;
+    transition: 0.2s;
+  }
+
+  .container:hover{
+    background-color: rgb(123, 209, 47);
   }
 
   .bar1, .bar2, .bar3 {
@@ -267,12 +355,12 @@ i{
   }
 
   .load1{
-    border: 6px solid rgb(38, 168, 11);
+    border: 6px solid white;
     border-top: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-radius: 100px;
-    width: 60px;
-    height: 60px;
+    width: 90px;
+    height: 90px;
     background-color: transparent;
     position: absolute;
     margin: 50%;
@@ -281,12 +369,12 @@ i{
   }
 
   .load2{
-    border: 6px solid rgb(38, 168, 11);
-    border-top: 6px solid transparent;
-    border-bottom: 6px solid transparent;
+    border: 6px solid white;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
     border-radius: 100px;
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     background-color: transparent;
     position: absolute;
     margin: 50%;
@@ -296,12 +384,12 @@ i{
   }
 
   .load3{
-    border: 6px solid rgb(38, 168, 11);
+    border: 6px solid white;
     border-top: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-radius: 100px;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     background-color: transparent;
     position: absolute;
     margin: 50%;
