--- a/styles/stile.css
+++ b/styles/stile.css
@@ -10,7 +10,7 @@ body {
 }*/
 
   h1 {
-    color: rgb(123, 209, 47);
+    color: rgb(35, 164, 48);
     text-align: center;
     text-shadow: 0 0 0px #000000;
     font-family: segoe UI;
@@ -145,7 +145,7 @@ body {
 
     input[type=text]:focus, input[type=password]:focus{
       padding: 12px 35px;
-      border-bottom: 3px rgb(123, 209, 47) solid;
+      border-bottom: 3px rgb(35, 164, 48) solid;
     }
 
     input[type=submit], input[type=button]  {
@@ -164,7 +164,7 @@ body {
     }
 
     form input[type=button]{
-      background-color: rgb(247, 159, 31);
+      background-color: rgb(35, 164, 48);
     }
     form input[type=button]:hover {
       background-color: rgb(252, 207, 139);
@@ -207,7 +207,7 @@ table i{
   width: 30px;
   height: 30px;
   font-size: 24px;
-  background-color: rgb(123, 209, 47);
+  background-color: rgb(35, 164, 48);
   color: /*#4a4a4a*/ white;
   padding: 14px;
   border-radius: 100px;
@@ -224,7 +224,7 @@ table i{
 .commandLinkTitle
 {
   margin: 3px;
-  color: rgb(58, 51, 171);
+  color: rgb(35, 164, 48);
   text-align: left;
   padding: 1px;
   font-weight: bold;
@@ -243,7 +243,7 @@ table i{
   border: rgb(222, 222, 222) solid 2px;
 }
 form b{
-  color:  rgb(123, 209, 47);
+  color:  rgb(35, 164, 48);
   font-size: 24px;
 
 }
@@ -279,7 +279,7 @@ form b{
   }
 
   .NavLi a:hover:not(.active) {
-    background-color: rgb(38, 168, 11);
+    background-color: rgb(35, 164, 48);
   }
 
   .NavActive {
@@ -319,7 +319,7 @@ form b{
   .sidenav a:hover {
     margin-left: 0;
     margin-right: 0;
-    background-color: rgb(123, 209, 47);
+    background-color: rgb(35, 164, 48);
     color: white;
   }
   .sidenav .closebtn {
@@ -354,7 +354,7 @@ form b{
   }
 
   .container:hover{
-    background-color: rgb(123, 209, 47);
+    background-color: rgb(35, 164, 48);
   }
 
   .bar1, .bar2, .bar3 {
@@ -385,7 +385,7 @@ form b{
   }
 
   .load1{
-    border: 6px solid white;
+    border: 6px solid rgb(35, 164, 48);
     border-top: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-radius: 100px;
@@ -399,7 +399,7 @@ form b{
   }
 
   .load2{
-    border: 6px solid white;
+    border: 6px solid rgb(35, 164, 48);
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
     border-radius: 100px;
@@ -414,7 +414,7 @@ form b{
   }
 
   .load3{
-    border: 6px solid white;
+    border: 6px solid rgb(35, 164, 48);
     border-top: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-radius: 100px;
