--- a/styles/stile.css
+++ b/styles/stile.css
@@ -10,10 +10,25 @@ body {
 }*/
 
   h1 {
-    color: rgb(35, 164, 48);
+    color: rgb(0, 153, 15);
     text-align: center;
     text-shadow: 0 0 0px #000000;
     font-family: segoe UI;
+  }
+
+  h3{
+    margin-left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+  }
+
+  h4 {
+    text-align: center;
+    font-family: segoe UI Light;
+    font-size: 28;
+    padding-left: 6px;
+    margin-left: 50%;
+    transform: translateX(-50%);
   }
 
   .pCaption {
@@ -23,15 +38,7 @@ body {
     padding-left: 6px;
   }
 
-  h4 {
 
-    text-align: left;
-    font-family: segoe UI Light;
-    font-size: 28;
-    padding-left: 6px;
-    margin-left: 50%;
-    transform: translateX(-50%);
-  }
 .infoLogin{
   /*font-weight: bold;*/
   font-family: Verdana;
@@ -145,7 +152,7 @@ body {
 
     input[type=text]:focus, input[type=password]:focus{
       padding: 12px 35px;
-      border-bottom: 3px rgb(35, 164, 48) solid;
+      border-bottom: 3px rgb(20, 181, 37) solid;
     }
 
     input[type=submit], input[type=button]  {
@@ -164,19 +171,19 @@ body {
     }
 
     form input[type=button]{
-      background-color: rgb(35, 164, 48);
+      background-color: rgb(218, 144, 34);
     }
     form input[type=button]:hover {
-      background-color: rgb(252, 207, 139);
+      background-color: rgb(250, 179, 74);
       color: black;
     }
 
     form input[type=submit]{
-      background-color: rgb(123, 209, 47);
+      background-color: rgb(0, 153, 15);
     }
 
     form input[type=submit]:hover{
-      background-color: rgb(184, 235, 140);
+      background-color: rgb(95, 198, 105);
       color: black;
     }
 
@@ -207,7 +214,7 @@ table i{
   width: 30px;
   height: 30px;
   font-size: 24px;
-  background-color: rgb(35, 164, 48);
+  background-color: rgb(0, 153, 15);
   color: /*#4a4a4a*/ white;
   padding: 14px;
   border-radius: 100px;
@@ -223,7 +230,7 @@ table i{
 .commandLinkTitle
 {
   margin: 3px;
-  color: rgb(35, 164, 48);
+  color: rgb(0, 153, 15);
   text-align: left;
   padding: 1px;
   font-weight: bold;
@@ -242,7 +249,7 @@ table i{
   border: rgb(222, 222, 222) solid 2px;
 }
 form b{
-  color:  rgb(35, 164, 48);
+  color:  rgb(59, 59, 59);
   font-size: 24px;
 
 }
@@ -278,7 +285,7 @@ form b{
   }
 
   .NavLi a:hover:not(.active) {
-    background-color: rgb(35, 164, 48);
+    background-color: rgb(0, 153, 15);
   }
 
   .NavActive {
@@ -318,7 +325,7 @@ form b{
   .sidenav a:hover {
     margin-left: 0;
     margin-right: 0;
-    background-color: rgb(35, 164, 48);
+    background-color: rgb(0, 153, 15);
     color: white;
   }
   .sidenav .closebtn {
@@ -353,7 +360,7 @@ form b{
   }
 
   .container:hover{
-    background-color: rgb(35, 164, 48);
+    background-color: rgb(0, 153, 15);
   }
 
   .bar1, .bar2, .bar3 {
@@ -384,7 +391,7 @@ form b{
   }
 
   .load1{
-    border: 6px solid rgb(35, 164, 48);
+    border: 6px solid rgb(0, 153, 15);
     border-top: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-radius: 100px;
@@ -398,7 +405,7 @@ form b{
   }
 
   .load2{
-    border: 6px solid rgb(35, 164, 48);
+    border: 6px solid rgb(0, 153, 15);
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
     border-radius: 100px;
@@ -413,7 +420,7 @@ form b{
   }
 
   .load3{
-    border: 6px solid rgb(35, 164, 48);
+    border: 6px solid rgb(0, 153, 15);
     border-top: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-radius: 100px;
