--- a/styles/stile.css
+++ b/styles/stile.css
@@ -4,11 +4,6 @@ body {
   font-family: segoe UI;
 }
 
-/*#logStudente, #home, #logProf, #chiSei{
-  background-color: #4a4a4a;
-  color: white;
-}*/
-
   h1 {
     color: rgb(0, 153, 15);
     text-align: center;
@@ -171,7 +166,7 @@ body {
     }
 
     form input[type=button]{
-      background-color: rgb(218, 144, 34);
+      background-color: rgb(236, 147, 14);
     }
     form input[type=button]:hover {
       background-color: rgb(250, 179, 74);
@@ -385,19 +380,19 @@ form b{
   /* Sidenav not laoding */
 
   .loading-container{
-    width: 100%;
-    margin: 50%;
-    transform: translate(-50%, -50%);
+    height: 20%;
+    width: 20%;
+    margin-top: 10%;
+    margin-left: 50%;
+    transform: translateX(-50%);
   }
 
   .load1{
-    border: 6px solid rgb(0, 153, 15);
-    border-top: 6px solid transparent;
-    border-bottom: 6px solid transparent;
+    padding: 5px;
     border-radius: 100px;
-    width: 90px;
-    height: 90px;
-    background-color: transparent;
+    width: 120px;
+    height: 120px;
+    background-color: rgb(0, 153, 15);
     position: absolute;
     margin: 50%;
     transform: translate(-50%, -50%);
@@ -405,33 +400,31 @@ form b{
   }
 
   .load2{
-    border: 6px solid rgb(0, 153, 15);
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
     border-radius: 100px;
-    width: 60px;
-    height: 60px;
+    width: 115px;
+    height: 115px;
     background-color: transparent;
     position: absolute;
     margin: 50%;
     transform: translate(-50%, -50%);
-    animation: 2s loading infinite;
-    animation-delay: 0.5s;
+    animation: 3s loading2 infinite;
   }
 
   .load3{
-    border: 6px solid rgb(0, 153, 15);
-    border-top: 6px solid transparent;
-    border-bottom: 6px solid transparent;
     border-radius: 100px;
-    width: 30px;
-    height: 30px;
+    width: 55px;
+    height: 55px;
     background-color: transparent;
     position: absolute;
     margin: 50%;
     transform: translate(-50%, -50%);
     animation: 1.5s loading infinite;
-    animation-delay: 0.5s;
+  }
+
+  .loading-text{
+    margin-top: 25%;
+    margin-left: 50%;
+    animation: 1.5s loading-text infinite;
   }
 
   @keyframes loading{
@@ -443,5 +436,27 @@ form b{
     }
     100%{
       transform: translate(-50%, -50%) rotate(0deg);
+    }
+  }
+  @keyframes loading2{
+    0%{
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+    50%{
+      transform: translate(-50%, -50%) rotate(360deg);
+    }
+    100%{
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+  }
+
+  @keyframes loading-text{
+    25%{
+      opacity: 0;
+      transform: translateX(-50%) translateY(-25%);
+    }
+    75%{
+      opacity: 1;
+      /*transform: translateX(-50%) translateY(-25%);*/
     }
   }
